# fast-down-py

./: .gitignore  Cargo.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: CI.yml
.zed/: settings.json
example/: print-progress.py
python/fastdown/: __init__.py  fastdown.pyi
src/: cancel.rs  config.rs  download.rs  error.rs  event.rs  force_send.rs  lib.rs  prefetch.rs  pusher.rs  url_info.rs
test/: test_lib.py
