[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "fastdown"
dynamic = ["version"]
description = "fast-down 的 python 接口:"
readme = "README.md"
authors = [
    { name = "share121", email = "me@s121.top" }
]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["downloader", "multithreaded", "rust", "asyncio"]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/fast-down/fast-down-py"
Repository = "https://github.com/fast-down/fast-down-py.git"
Issues = "https://github.com/fast-down/fast-down-py/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.maturin]
python-source = "python"
module-name = "fastdown.fastdown"
include = ["python/fastdown/*.pyi"]
